--- a/src/main/resources/web/frontend/home.html
+++ b/src/main/resources/web/frontend/home.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.3.0/sockjs.min.js"></script>
     <script src="./dist/build.js"></script>
   </body>
 </html>
